fix large image on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -121,5 +121,7 @@ a {
   }
   #hero > h1 {
     font-size: 30vw;
+    color: #fefefe;
+    background: none;
   }
 }
